erDiagram
  TENANTS ||--o{ APPROVAL_CHAINS : defines
  APPROVAL_CHAINS ||--o{ APPROVAL_CHAIN_STEPS : has_step
  TENANTS ||--o{ APPROVAL_REQUESTS : raises
  APPROVAL_CHAINS ||--o{ APPROVAL_REQUESTS : uses
  USERS ||--o{ APPROVAL_REQUESTS : requested_by
  APPROVAL_REQUESTS ||--o{ APPROVAL_REQUEST_APPROVERS : routed_to
  USERS ||--o{ APPROVAL_REQUEST_APPROVERS : acts_as
  APPROVAL_REQUESTS ||--o{ ORDERS : may_gate
  APPROVAL_REQUESTS ||--o{ SPENDING_EVENTS : referenced_by


